feat: implement DOMPET finance API
